# farmingGameDev

./: .gitignore  CMakeLists.txt
include/: config.hpp  errorHandling.hpp  game.hpp  renderer.hpp  textManager.hpp
src/: errorHandler.cpp  game.cpp  main.cpp  renderer.cpp  textManager.cpp
